styles/styles.css
@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/ptsans-400.woff2") format("woff2");
  font-display: swap;
}

@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/ptsans-700.woff2") format("woff2");
  font-display: swap;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  height: 100%;
}

body {
  height: 100%;
  margin: 0;
  font-family: "PT Sans", sans-serif;
  font-size: 18px;
  line-height: 21px;
  color: #333333;
  background-color: #f2f2f2;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* Page-container */
.page-container {
  display: flex;
  flex-direction: column;
  width: 1200px;
  min-height: 100%;
  margin: 0 auto;
  background-color: #ffffff;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
}

/* Header */
.page-header {
  z-index: 1;
  margin-bottom: -6px;
  padding: 0 70px;
}

.nav {
  display: flex;
  align-items: flex-start;
}

.nav__logo {
  margin-right: 28px;
}

.nav__img {
  display: block;
}

.nav__list,
.nav__user {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
  list-style: none;
}

.nav__list {
  min-width: 340px;
  margin-right: auto;
}

.nav__item {
  padding: 6px;
}

.nav__link {
  display: block;
  padding: 14px 10px;
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  text-decoration: none;
  color: #000000;
}

.nav__user {
  justify-content: flex-end;
  min-width: 88px;
  margin: 0 20px;
}

.nav__user-item {
  min-width: 44px;
  height: 64px;
  padding: 4px;
}

.nav__user-link {
  display: block;
  height: 100%;
}

.nav__user-link--favorite {
  display: grid;
  text-decoration: none;
}

.nav__favorites {
  grid-row: 1;
  align-self: start;
  display: inline-block;
  min-width: 20px;
  margin-top: 7px;
  margin-left: 16px;
  padding: 5px 4px;
  font-size: 10px;
  line-height: 10px;
  text-align: center;
  color: #ffffff;
  background-color: #7db54f;
  border-radius: 10px;
}

.nav__buttons-wrapper {
  flex-shrink: 0;
  display: flex;
  flex-wrap: wrap;
  max-width: 340px;
  column-gap: 14px;
}

.nav__button {
  width: 160px;
  margin: 14px 0;
}

/* Button */
.button {
  padding: 8px 5px;
  font-family: inherit;
  font-size: 16px;
  line-height: 20px;
  font-weight: 700;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  color: #ffffff;
  background-color: #756157;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.button--util {
  background-color: #82b3d3;
}

.button--reset {
  background-color: rgba(0, 0, 0, 0);
}

.button--active {
  background-color: #7db54f;
}

/* Main container */
.main-container {
  flex-grow: 1;
}

/* Main index */
.main-index {
  text-align: center;
}

.main__subhead {
  margin: 0;
  font-size: 30px;
  line-height: 36px;
  font-weight: 700;
  text-transform: uppercase;
  color: #000000;
}

.main__text {
  margin: 0;
  font-size: 22px;
  line-height: 26px;
}

/* Hero */
.hero {
  min-height: 485px;
  padding: 51px 0 82px;
  color: #ffffff;
  background-color: #708ea1;
  background-image: url("../images/hero-divider.svg"), url("../images/background-hero.jpg");
  background-size: 100% auto, cover;
  background-position: bottom, center;
  background-repeat: no-repeat;
}

.hero__img {
  display: block;
  margin: 0 auto;
}

/* Advantages */
.advantages {
  padding-top: 69px;
}

.advantages__title {
  width: 620px;
  margin: 0 auto;
  margin-bottom: 25px;
}

.advantages__text {
  margin-bottom: 90px;
}

.advantages__list,
.recommend__list {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-flow: dense;
  justify-content: center;
  margin: 0;
  padding: 0;
  list-style: none;
}

.advantages__item--wide {
  grid-column: span 3;
  display: flex;
  align-items: center;
  color: #ffffff;
  background-color: #82b3d3;
}

.advantages__item--reverse {
  flex-direction: row-reverse;
}

.advantages__item-img {
  flex-grow: 1;
  height: auto;
}

/* Tile */
.tile {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 385px;
  padding: 75px 85px;
  background-color: rgba(131, 179, 211, 0.12);
}

.tile--semi-opaque {
  background-color: rgba(131, 179, 211, 0.2);
}

.tile--transparent {
  background-color: rgba(0, 0, 0, 0);
}

.advantages__item--wide .tile {
  flex-shrink: 0;
  width: calc(100% / 3);
  background-color: rgba(0, 0, 0, 0);
}

.tile__title {
  margin: 0 0 62px;
  font-size: 24px;
  line-height: 28px;
  font-weight: 700;
  text-transform: uppercase;
  color: #000000;
}

.advantages__item--wide .tile__title {
  color: #ffffff;
}

.tile__text {
  margin: 0;
}

/* Recommendations */
.recommend {
  padding-top: 64px;
}

.recommend__title {
  width: 505px;
  margin: 0 auto;
  margin-bottom: 20px;
}

.recommend__text {
  margin-bottom: 64px;
}

.recommend__item .tile__title {
  margin-bottom: 30px;
}

/* Search */
.search {
  padding: 96px 304px;
}

.search__title {
  margin-bottom: 20px;
}

.search__text {
  margin-bottom: 54px;
}

.search__button,
.subscribe__button {
  padding: 8px 50px;
  font-size: 20px;
  line-height: 36px;
}

/* Subscribe */
.subscribe {
  padding: 96px 258px 104px;
  text-align: center;
}

.subscribe--background {
  color: #ffffff;
  background-color: #708ea1;
  background-image: url("../images/background-subscribe.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.subscribe--background .main__subhead {
  color: #ffffff;
}

.subscribe__title {
  margin-bottom: 20px;
}

.subscribe__text {
  margin: 0 auto;
  margin-bottom: 55px;
}

.subscribe__form {
  display: flex;
}

.subscribe__label {
  flex-grow: 1;
}

.subscribe__input {
  width: 100%;
  height: 100%;
  padding-left: 20px;
  font-family: inherit;
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  background-color: #f2f2f2;
  border: none;
}

.subscribe__input::placeholder {
  color: #000000;
  opacity: 0.6;
}

/* Footer */
.page-footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 40px 70px 30px;
}

.page-footer__socials {
  flex-shrink: 0;
  display: flex;
  flex-wrap: wrap;
  row-gap: 8px;
  max-width: 240px;
  margin: 0;
  padding: 0;
  list-style: none;
}

.page-footer__socials-item {
  padding: 0 4px;
}

.page-footer__socials-link {
  display: block;
  width: 40px;
  height: 50px;
}

.page-footer__contacts {
  margin: 0 40px;
  font-style: normal;
  font-size: 40px;
  line-height: 40px;
  color: #000000;
}

.page-footer__contacts-item {
  display: block;
  margin-bottom: 8px;
  padding: 5px;
  text-align: center;
  text-decoration: none;
  color: #000000;
}

.page-footer__contacts-item:last-child {
  margin-bottom: 0;
}

.page-footer__academy-link {
  display: block;
  padding: 5px 0;
}

.page-footer__academy-logo {
  display: block;
}

/* Main catalog */
.main-catalog__wrapper {
  padding: 35px 70px 70px;
  color: #ffffff;
  background-color: #708ea1;
  background-image: url("../images/background-filter.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.main__title {
  margin: 0;
  font-size: 60px;
  line-height: 78px;
  font-weight: 700;
}

.main__breadcrumbs {
  display: flex;
  flex-wrap: wrap;
  gap: 8px 5px;
  margin: 0 0 8px -5px;
  padding: 0;
  list-style: none;
}

.main__breadcrumbs-link {
  display: block;
  padding: 8px 5px;
  font-size: 16px;
  text-decoration: none;
  color: #ffffff;
}

.main__breadcrumbs-link--index {
  width: 23px;
  height: 100%;
}

/* Filter */
.filter__form {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  row-gap: 30px;
  column-gap: 70px;
  padding-top: 24px;
}

.filter__form-fieldset {
  margin: 0;
  padding: 0;
  border: none;
}

.filter__form-fieldset--housing {
  margin-right: auto;
}

.filter__form-fieldset--price {
  display: flex;
  column-gap: 2px;
}

.filter__form-legend {
  margin-bottom: 32px;
  padding: 0;
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
}

.filter__form-list {
  margin: 0;
  padding: 0;
  list-style: none;
}

.filter__form-item:not(:last-child) {
  margin-bottom: 16px;
}

.filter__form-label {
  line-height: 23px;
}

.filter__form-label--price {
  display: grid;
}

.filter__form-span {
  z-index: 1;
  grid-row: 1;
  grid-column: 1;
  justify-self: end;
  padding: 13px 20px 11px 0;
  line-height: 24px;
  color: #000000;
  opacity: 0.3;
}

.filter__form-input {
  grid-row: 1;
  grid-column: 1;
  width: 143px;
  padding: 13px 25px 11px 20px;
  font-family: inherit;
  font-size: 18px;
  line-height: 24px;
  font-weight: 700;
  color: #000000;
  border: none;
}

.filter__form-input::placeholder {
  color: #000000;
}

.filter__form-buttons {
  display: flex;
  flex-direction: column;
  row-gap: 32px;
  padding-top: 56px;
}

.filter__form-button {
  max-width: 220px;
  min-width: 191px;
}

/* Catalog */
.catalog {
  padding: 50px 70px 60px;
}

/* Catalog header */
.catalog__header {
  display: flex;
  align-items: center;
  margin-bottom: 40px;
}

.catalog__title {
  min-width: 355px;
  margin-right: auto;
}

.catalog__sort {
  min-width: 292px;
  margin: 0 70px;
  padding: 14px 0 14px 20px;
  font: inherit;
  line-height: 21px;
  color: #333333;
  border: none;
  box-shadow: inset 0 0 0 2px #e5e5e5;
  appearance: none;
}

.catalog__group {
  flex-shrink: 0;
  align-self: flex-start;
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  max-width: 272px;
  margin: 0;
  padding: 0;
  list-style: none;
}

.catalog__group-item {
  box-shadow: inset 0 0 0 2px #e5e5e5;
}

.catalog__group-item--active {
  box-shadow: inset 0 0 0 2px #000000;
}

.catalog__group-link {
  display: block;
  width: 48px;
  height: 48px;
}

/* Hotels */
.catalog__list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
  gap: 20px;
  margin: 0;
  margin-bottom: 40px;
  padding: 0;
  list-style: none;
}

.hotel {
  display: grid;
  grid-template-rows: min-content 1fr;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  row-gap: 16px;
  column-gap: 20px;
  padding: 20px;
  box-shadow: 0 0 0 1px #e6e6e6;
  border-radius: 4px;
}

.hotel__link-title {
  grid-column: span 2;
  text-decoration: none;
}

.hotel__title {
  margin: 0;
  font-size: 24px;
  line-height: 28px;
  font-weight: 700;
  color: #000000;
}

.hotel__link-img {
  grid-column: span 2;
  order: -1;
}

.hotel__img {
  display: block;
  width: 100%;
  height: auto;
  aspect-ratio: 300 / 212;
  object-fit: contain;
}

.hotel__housing {
  margin: 0;
}

.hotel__price {
  margin: 0;
  text-align: end;
}

.hotel__stars {
  margin: 0;
}

.hotel__rating {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 9px 5px 8px;
  font-size: 16px;
  line-height: 20px;
  text-align: center;
  text-transform: uppercase;
  background-color: #f2f2f2;
  border-radius: 4px;
}

/* Pagination */
.catalog__pagination {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 8px;
  margin: 0;
  padding: 0;
  padding-top: 40px;
  list-style: none;
  box-shadow: inset 0 1px #e6e6e6;
}

.catalog__pagination-link,
.catalog__pagination-item--ellipsis {
  display: flex;
  justify-content: center;
  align-items: center;
  min-width: 60px;
  padding: 12px 8px;
  font-size: 20px;
  line-height: 36px;
}

.catalog__pagination-link--current {
  color: #000000;
  background-color: #f2f2f2;
  cursor: initial;
}

.catalog__pagination-item--ellipsis {
  font-size: 22px;
  line-height: 26px;
  color: #000000;
}

